# EasyMLOps

./: .cursorrules  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.airflow.yaml  docker-compose.cdc.yaml  docker-compose.data-lake.yaml  docker-compose.dwh.yaml  docker-compose.kafka.yaml  docker-compose.minio.yaml  docker-compose.mlflow.yaml  docker-compose.monitor.yaml  docker-compose.nginx.yaml  docker-compose.online-store.yaml  docker-compose.ray.yaml  docker-compose.serving.yaml  docker-compose.yaml  pyproject.toml  requirements.txt
notebook/: eda.ipynb  serving.ipynb
scripts/: view_detailed_schema.sh
src/airflow/: .env.example  Dockerfile  docker-compose.airflow.yaml  requirements.txt
src/airflow/dags/: data_pipeline.py  gx_tutorial.py  minio_pipeline.py  training_pipeline.py
src/airflow/dags/common/scripts/: db_utils.py  monitoring.py  sql_utils.py
src/airflow/dags/config/: data_pipeline_config.py  minio_config.py
src/airflow/dags/data_pipeline/bronze/: ingest_raw_data.py  validate_raw_data.py
src/airflow/dags/data_pipeline/gold/: load_to_dwh.py
src/airflow/dags/tasks/: minio_tasks.py  postgres_tasks.py  transform_tasks.py
src/airflow/dags/tasks/bronze/: ingest_raw_data.py  (+1 more)
src/airflow/dags/training_pipeline/: data_loader.py  hyperparameter_tuning.py  model_trainer.py
src/airflow/dags/utils/: error_handling.py  transform_utils.py
src/airflow/include/config/: tune_config.py
src/airflow/include/gx/: great_expectations.yml
src/airflow/include/queries/: load_training_data.sql
src/airflow/include/views/: analytical_views.sql
src/cdc/: .env.example  Dockerfile  README.md  create_table.py  insert_data.py  postgresql_client.py  run.sh
src/cdc/configs/: postgresql-cdc.json
src/collector/: .dockerignore  .env.example  Dockerfile  app.py  requirements.txt
src/collector/src/: config.py  processor.py
src/feature_stores/: Dockerfile  api.py  data_sources.py  feature_store.yaml  features.py  features_view.py  ingest_stream.py  ingest_stream_to_online_store.py  materialize_features.py  requirements.txt  run.sh  setup.py  setup_db.py  test_features.py  transform_features.py
src/feature_stores/api/: main.py
src/feature_stores/retrieval/: materialize.sh
src/feature_stores/sql/: init_db.sql  setup_db.sql
src/mlflow/: .env.example
src/model_registry/: Dockerfile
src/observability/clickhouse-setup/: docker-compose-minimal.yaml
src/observability/grafana/config/: dashboards.yaml
src/orchestration/dags/: data_pipeline.py
src/orchestration/dags/training_pipeline/: data_loader.py  hyperparameter_tuning.py  results_saver.py
src/orchestration/include/config/: data_pipeline_config.py
src/producer/: .env.example  Dockerfile  produce.py  produce_avro.py  produce_json.py  run.sh
src/producer/avro_schemas/: ecommerce_events.avsc  schema_0.avsc
src/ray/: .env.example  Dockerfile  docker-compose.ray.yaml  manage-cluster.sh  requirements.txt  setup-permissions.sh
src/serving/: Dockerfile  docker-compose.serving.yaml  main.py  online_feature_service.py  prediction_service.py  pyproject.toml  requirements.txt
src/serving/feature_stores/: .gitignore  feature_store.yaml  run.sh
src/streaming/: .env.example  main.py
src/streaming/connectors/: deploy_s3_connector.py
src/streaming/connectors/config/: minio-sink-connector.json  s3-sink-connector.json
src/streaming/jobs/: alert_invalid_events_job.py  feature_calculation_job.py  kafka_to_feast_online_store_job.py  schema_validation_job.py  validated_events_to_features_job.py
src/streaming/processors/transformations/: data_cleaner.py  data_enricher.py
src/streaming/processors/utils/: metrics_collector.py
src/streaming/utils/: metrics.py
src/training/: README.md  data_loader.py  main.py  preprocessor.py  requirements.txt  trainer.py
test/data_ingestion/: run.sh
test/data_ingestion/kafka_producer/: produce_json.py
(+10 files in other folders)
