[project]
name = "easydatapipeline"
version = "0.1.0"
description = "A simple data pipeline project"
readme = "README.md"
requires-python = ">=3.9.18"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.4.0",
    "appdirs==1.4.4",
    "async-timeout==4.0.3",
    "attrs==24.2.0",
    "avro-python3==1.8.1",
    "boto3==1.35.74",
    "botocore>=1.35.77",
    "bowler==0.9.0",
    "certifi==2024.7.4",
    "charset-normalizer==3.3.2",
    "click==8.1.7",
    "colorama==0.4.6",
    "dask==2024.8.0",
    "exceptiongroup==1.2.2",
    "fastapi==0.112.2",
    "fissix==24.4.24",
    "fsspec==2024.6.1",
    "greenlet==3.0.3",
    "grpcio==1.66.0",
    "gunicorn==23.0.0",
    "h11==0.14.0",
    "hiredis==2.4.0",
    "httpcore==1.0.5",
    "httptools==0.6.1",
    "httpx==0.27.2",
    "idna==3.8",
    "importlib-metadata==6.11.0",
    "importlib-resources==6.4.4",
    "jinja2==3.1.4",
    "jsonschema-specifications==2023.12.1",
    "jsonschema==4.23.0",
    "kafka-python>=2.0.2",
    "loguru==0.7.1",
    "mlflow==2.19.0",
    "pandas>=1.3.5",
    "psycopg2-binary==2.9.9",
    "pyarrow==11.0.0",
    "pydantic-settings==2.0.2",
    "python-schema-registry-client==2.4.1",
    "ray[data,serve,train,tune]==2.9.0",
    "setuptools>=75.6.0",
    "sqlalchemy==1.4.53",
    "tqdm==4.66.5",
    "xgboost>=2.1.3",
    "locket==1.0.0",
    "markupsafe==2.1.5",
    "mmh3==4.1.0",
    "moreorless==0.4.0",
    "mypy==1.11.2",
    "mypy-extensions==1.0.0",
    "mypy-protobuf==3.1.0",
    "packaging==24.1",
    "pandavro==1.5.2",
    "partd==1.4.2",
    "proto-plus==1.24.0",
    "psycopg==3.2.1",
    "psycopg-binary==3.2.1",
    "psycopg-pool==3.2.2",
    "py4j==0.10.9.7",
    "pydantic==2.8.2",
    "pydantic-core==2.20.1",
    "pygments==2.18.0",
    "pyspark==3.5.2",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.0.1",
    "pytz==2024.1",
    "pyyaml==6.0.2",
    "redis==4.6.0",
    "referencing==0.35.1",
    "requests==2.32.3",
    "rpds-py==0.20.0",
    "six==1.16.0",
    "sniffio==1.3.1",
    "sqlalchemy2-stubs==0.0.2a38",
    "starlette==0.38.2",
    "tabulate==0.9.0",
    "tenacity==8.5.0",
    "toml==0.10.2",
    "tomli==2.0.1",
    "toolz==0.12.1",
    "typeguard==4.3.0",
    "types-protobuf==5.27.0.20240626",
    "typing-extensions==4.12.2",
    "tzdata==2024.1",
    "uvicorn==0.30.6",
    "uvloop==0.20.0",
    "volatile==2.1.0",
    "watchfiles==0.23.0",
    "websockets==13.0",
    "zipp==3.20.1",
    "feast==0.42.0",
]

[tool.uv.workspace]
members = ["src/serving"]
